--- a/tuerchen6_dfgztre.html
+++ b/tuerchen6_dfgztre.html
@@ -11,11 +11,77 @@
 
 <h1>Türchen 6</h1>
 
-<div class="card">
-  <p>Füge hier deinen eigenen Inhalt ein.</p>
+<!-- LOCKED OVERLAY -->
+<div id="locked-overlay" class="locked-overlay">
+  <div class="locked-box">
+    <h2>Türchen 6 ist noch verschlossen</h2>
+    <p>Öffnet am <strong id="unlock-date-text"></strong> um 00:00 Uhr</p>
+  </div>
 </div>
 
-<a href="index.html" class="back-link">Zurück zum Adventskalender</a>
+<div class="card" id="content-box">
 
+ <!-- PDF Preview -->
+  <div id="pdf-container">
+    <iframe id="pdf-frame"
+            style="width:100%; height:500px; border:1px solid rgba(255,255,255,0.2); border-radius:12px;"
+            src="plaene/6.pdf"
+            allowfullscreen></iframe>
+  </div>
+
+  <!-- Download Button -->
+  <a id="download-btn"
+     href="plaene/6.pdf"
+     download
+     class="back-link"
+     style="margin-top:20px; display:inline-block;">
+     PDF herunterladen
+  </a>
+
+  <!-- Fehler -->
+  <p id="error-msg" style="color:#ff8888; font-weight:bold; display:none;">
+    ❌ PDF konnte nicht geladen werden.
+  </p>
+  
+<script>
+// ----------- SETTINGS -----------
+
+const number = 6;                 // Türchen-Nummer einsetzen
+const pdfPath = `plaene/${number}.pdf`;
+
+// Freigabedatum:
+const unlockDate = new Date(`${new Date().getFullYear()}-11-${String(number).padStart(2, "0")}T00:00:00`);
+
+// DOM refs
+const overlay = document.getElementById("locked-overlay");
+const contentBox = document.getElementById("content-box");
+const unlockDateTxt = document.getElementById("unlock-date-text");
+const iframe = document.getElementById("pdf-frame");
+const downloadBtn = document.getElementById("download-btn");
+const errorMsg = document.getElementById("error-msg");
+
+// Datumstext
+unlockDateTxt.textContent = unlockDate.toLocaleDateString("de-DE");
+
+// ----------- LOCK LOGIC -----------
+
+const now = new Date();
+
+if (now < unlockDate) {
+  // Tür ist LOCKED
+  overlay.style.display = "flex";
+  contentBox.style.display = "none";
+  downloadBtn.style.pointerEvents = "none";
+} else {
+  // Tür ist OPEN
+  overlay.style.display = "none";
+  contentBox.style.display = "block";
+
+  // PDF Download-Link aktivieren
+  downloadBtn.href = pdfPath;
+}
+</script>
+</div>
+<a href="index.html" class="back-link">Zurück zum Adventskalender</a>
 </body>
 </html>
